fix wierd overflow

--- a/Article/article.css
+++ b/Article/article.css
@@ -6,7 +6,6 @@
 	position: relative;
 	margin: 0;
 	min-height: 560px;
-	width: 100%;
 }
 
 .bg-img {
